--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -15,38 +15,51 @@
   /deep/.el-collapse-item__wrap {
     margin-left: -5px;
   }
-
+  /deep/.el-collapse-item__header{
+    height: 24px;
+    line-height: 24px;
+  }
   /deep/.el-collapse-item__content {
     padding-bottom: 0;
+    position: relative;
+    padding:5px 0;
+    padding-left: 25px;
+    &::after{
+      position: absolute;
+      content: '';
+      left:12px;
+      top: -5px;
+      bottom: -5px;
+      border-left: 1px solid #ebeef5;
+    }
   }
-
+/*应用布局选择块**/
   .drag-box-width {
     cursor: pointer;
-    width: 33.333%;
+    width: 25%;
     border-radius: 3px;
-    float: left;
+    display: inline-block;
 
     .drag-box {
+      width: 70px;
+      height: 70px;
       margin-top: 5px;
       margin-left: 5px;
-      padding: 1px;
-      background-color: #f9fafc;
-
+      padding-top: 10px;
+      border-radius: 3px;
+      border: 1px solid #fff;
+      transition: all .3s;
+      position: relative;
+      .el-icon-vip-xuanzhong{
+        position: absolute;
+        right:-1px;
+        top: 0;
+        color: #3E54EE;
+      }
       &:hover {
-        background-color: @ph-col-n19;
-
-        .d-b-txt {
-          color: @m-col-b7;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          white-space: nowrap;
-        }
+        border: 1px solid #3E54EE;
       }
     }
-
-    // &:nth-child(3n+3){
-    // margin-right: 0;
-    // }
 
     i.d-b-img {
       padding: 10px;
@@ -72,6 +85,49 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+    }
+  }
+  /*颜色-模板-选择块**/
+  .drag-box-btn-w{
+    // width: 33.333%;
+    display: inline-block;
+    .drag-box{
+      width:95px;
+      height: 32px;
+      line-height: 32px;
+      border-radius: 3px;
+      margin-right: 5px;
+      margin-bottom: 5px;
+      font-weight: 500;
+      text-align: center;
+      background: #F9FAFC;
+      font-size: 14px;
+      position: relative;
+      cursor: pointer;
+      border: 1px solid #fff;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      &:hover {
+        border: 1px solid #3E54EE;
+      }
+      .el-icon-vip-xuanzhong{
+        color: #3E54EE;
+        background: #fff;
+        border-radius: 0 0 0 30px;
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+    }
+    .fot-c1{
+      color: #fff;
+    }
+    .fot-c2{
+      color: #34395E;
+    }
+    .active1{
+      border: 1px solid #3E54EE;
     }
   }
   .app-type{
@@ -108,11 +164,7 @@
 
 /*****box选中状态 */
 .box-active {
-  background-color: #e3e6ff !important;
-
-  .d-b-txt {
-    color: @m-col-b7  !important;
-  }
+  border: 1px solid #3E54EE !important;
 }
 
 .drag-box-warp {
@@ -121,8 +173,9 @@
 
 /***模板配置 */
 .model-set-w {
-  display: flex;
-  padding-top: 5px;
+  width: calc(100% - 10px);
+  // display: flex;
+  // padding-top: 5px;
 }
 
 .r-model-w {
@@ -145,6 +198,7 @@
 .w60{
   width: 60px;
 }
+/*图片上传**/
 .up-img {
   cursor: pointer;
   height: 60px;
@@ -204,7 +258,104 @@
     }
   }
 }
-
+/*块元素-样式选项块**/
+.box-title-img{
+  border-radius: 3px;
+  overflow: hidden;
+  margin-bottom: 15px;
+  box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1);
+  &:hover{
+    .btn-show{
+      opacity: 1 !important;
+    }
+  }
+  .title{
+    font-size: 14px;
+    color: #34395E;
+    width: 100%;
+    height: 25px;
+    padding: 0 10px;
+    line-height: 25px;
+    background: #E2E8F1;
+    border-radius: 3px 3px 0px 0px;
+  }
+  .img-w{
+    height: 85px;
+    position: relative;
+    .img-show,.btn-show{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      z-index: 1;
+      top: 0;
+    }
+    .img-show{
+      display: flex;
+      padding: 10px;
+      img{
+        height:auto;
+        max-width: 100%;
+        display: block;
+        margin: auto;
+      }
+    }
+    .del-img{
+      cursor: pointer;
+      position: absolute;
+      z-index: 5;
+      right:16px;
+      top:17px;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      font-size: 13px;
+      padding: 6px 5px;
+      color: #fff;
+      text-align: center;
+      transition: all .3s;
+      background: rgba(0,0,0,0.5);
+      &:hover{
+        background: rgba(0,0,0,0.8);
+      }
+    }
+    .btn-show{
+      opacity: 0;
+      cursor: pointer;
+      z-index: 2;
+      transition: all .3s;
+      div {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        background: rgba(255, 255, 255, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    
+        span {
+          color: #6777ef;
+          font-size: 12px;
+          margin-top: 5px;
+        }
+      }
+    
+      input {
+        opacity: 0;
+        position: absolute;
+        width: 50%;
+        margin-left: 25%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 3;
+      }
+    }
+  }
+}
 /**右侧**/
 .drag-r-warp {
   right: 0;
