--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -12,45 +12,54 @@
   //   }
   // }
   .fixed-menu-w{
-    height: 50px;
-    line-height: 50px;
-    padding:0 15px;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.08);
+    height: 56px;
+    line-height: 56px;
+    padding-right:12px;
+    background: #D5DCE9;
     margin-bottom: 5px;
     position: relative;
-    span{
-      color: #34395E;
-      font-size: 16px;
-      padding:10px 0;
-      margin-right:10px;
+    .box{
+      display: inline-block;
+      color: #575F9B;
+      font-size: 14px;
+      padding:10px;
+      height: 100%;
       cursor: pointer;
+      text-align: center;
+      i{
+        display: block;
+        line-height:18px;
+        margin-bottom: 5px;
+      }
+      i.iconfont{
+        font-size:16px;
+      }
       &:hover{
-        color: #6777ef;
-        font-weight: bold;
-        border-bottom:2px solid #6777ef;
+        background: rgba(255, 255, 255, 0.15);
       }
     }
     .active{
-      color: #6777ef;
-      font-weight: bold;
-      border-bottom:2px solid #6777ef;
+      background: rgba(255, 255, 255, 0.2);
     }
     .r-bt{
       position: absolute;
       right:7px;
       top: -17px;
       top: 0;
-      color: #34395E;
+      color: #fff;
       i{
         cursor: pointer;
-        height:50px;
-        line-height: 50px;
+        height: 22px;
         width: 22px;
+        line-height: 22px;
+        text-align: center;
         font-size: 16px;
         text-align: center;
+        background: rgba(0, 0, 0, 0.3);
+        border-radius: 50%;
+        margin-left: 5px;
         &:hover{
-          font-weight: bold;
-          color: #3E54EE;
+          background:#575F9B;
         }
       }
     }
@@ -75,7 +84,7 @@
         width: 100%;
         height: 100%;
         min-height:500px;
-        padding: 0 20px;
+        padding: 0 12px;
         padding-bottom: 20px;
         overflow-y: auto;
         &::-webkit-scrollbar {width:3px;height: 5px;}
@@ -93,10 +102,10 @@
       .drag-l,.drag-r{
         user-select:none;
         position: fixed;
-        top: 110px;
+        top: 105px;
         z-index: 9;
         background: #fff;
-        width: 255px;
+        width: 350px;
         z-index: 2;
         box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
         // box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
@@ -130,8 +139,7 @@
         }
       }
       .drag-r{
-        width: 500px;
-        right: 0;
+        right:10px;
         .cut-btn{
           right: 255px;
           border-radius:40px 0px 0px 40px;
