--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -6,6 +6,37 @@
   position: relative;
   margin-top: 10px;
 }
+/deep/.el-collapse-item__wrap {
+  margin-left: -5px;
+}
+/deep/.el-collapse-item__header{
+  height: 24px;
+  line-height: 24px;
+}
+/deep/.el-collapse-item__content {
+  padding-bottom: 0;
+  position: relative;
+  padding:5px 0;
+  padding-left: 25px;
+  padding-right: 10px;
+  &::after{
+    position: absolute;
+    content: '';
+    left:12px;
+    top: -5px;
+    bottom: -5px;
+    border-left: 1px solid #ebeef5;
+  }
+}
+.color-clooapse{
+  .drag-box-btn-w{
+    &:nth-child(3n+3){
+      .drag-box{
+        margin-right: 0px;
+      }
+    }
+  }
+}
 /**左侧***/
 .drag-l-warp {
   left: 0;
@@ -14,27 +45,6 @@
   .cut-btn {
     left: 255px;
     border-radius: 0px 40px 40px 0px;
-  }
-  /deep/.el-collapse-item__wrap {
-    margin-left: -5px;
-  }
-  /deep/.el-collapse-item__header{
-    height: 24px;
-    line-height: 24px;
-  }
-  /deep/.el-collapse-item__content {
-    padding-bottom: 0;
-    position: relative;
-    padding:5px 0;
-    padding-left: 25px;
-    &::after{
-      position: absolute;
-      content: '';
-      left:12px;
-      top: -5px;
-      bottom: -5px;
-      border-left: 1px solid #ebeef5;
-    }
   }
 /*应用布局选择块**/
   .drag-box-width {
@@ -192,19 +202,19 @@
 
 /***模板配置 */
 .model-set-w {
-  width: calc(100% - 10px);
+  // width: calc(100% - 10px);
   // display: flex;
   // padding-top: 5px;
 }
 
-.r-model-w {
-  margin: 0 -5px;
+// .r-model-w {
+//   margin: 0 -5px;
 
-  .btn-block {
-    margin-left: 5px;
-    width: calc(100% - 10px);
-  }
-}
+//   .btn-block {
+//     margin-left: 5px;
+//     width: calc(100% - 10px);
+//   }
+// }
 
 /***上传图片按钮 */
 .w100 {
@@ -283,6 +293,7 @@
   overflow: hidden;
   margin-bottom: 15px;
   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.1);
+  width: calc(100% - 7px);
   &:hover{
     .btn-show{
       opacity: 1 !important;
@@ -397,11 +408,11 @@
       content: "";
       display: block;
       position: absolute;
-      height: 1px;
-      left: -20px;
-      right: -20px;
-      bottom: 0;
-      background-color: @ph-col-n3;
+      height: 24px;
+      width: 1px;
+      left: 7px;
+      bottom: -20px;
+      background-color: #ebeef5;
     }
   }
 
@@ -420,7 +431,7 @@
   .select-type {
     .s-list {
       max-height: 270px;
-      overflow-y: auto;
+      // overflow-y: auto;
       overflow-x: hidden;
       margin: 0 -20px;
     }
@@ -576,15 +587,29 @@
 }
 
 .row-switch {
-  padding-top: 70px;
-  padding-bottom: 5px;
-  border-radius: 2px;
-  background: #eff2f3;
-
+  position: absolute;
+  top: 4px;
+  right:30px;
+  /deep/.el-switch__core{
+    width: 20px !important;
+    height: 12px;
+    border: 1px solid #6777ef;
+  }
+  /deep/.el-switch__core:after{
+    background-color: #6777ef;
+    width: 6px;
+    height: 6px;
+    top: 2px;
+    left: 2px;
+  }
+  /deep/.el-switch.is-checked .el-switch__core::after{
+    background-color: #fff;
+    margin-left: 9px;
+  }
   .title {
-    font-size: 14px;
-    color: @ph-col-n12;
-    padding-left: 5px;
+    font-size: 12px;
+    color: #666;
+    padding-left:3px;
   }
 }
 
