--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -85,6 +85,7 @@
         height: 100%;
         min-height:500px;
         padding: 0 12px;
+        padding-right: 5px;
         padding-bottom: 20px;
         overflow-y: auto;
         &::-webkit-scrollbar {width:3px;height: 5px;}
@@ -107,8 +108,9 @@
         background: #fff;
         width: 350px;
         z-index: 2;
-        box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
+        // box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
         // box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
         .cut-btn{
           cursor: pointer;
           display: block;
