--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -308,6 +308,13 @@
     line-height: 25px;
     background: #E2E8F1;
     border-radius: 3px 3px 0px 0px;
+    position: relative;
+    .icon-r{
+      color: #6777ef;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
   }
   .img-w{
     height: 85px;
@@ -386,6 +393,23 @@
     }
   }
 }
+.border-img-check{
+  border: 2px solid #3E54EE;
+}
+.check-temp{
+  width:140px;
+  display:inline-block;
+  margin-right:15px;
+  &:nth-child(even){
+    margin-right: 0;
+  }
+  .img-w{
+    height: 70px;
+    .img-show{
+      padding: 0;
+    }
+  }
+}
 /**右侧**/
 .drag-r-warp {
   right: 0;
@@ -431,9 +455,12 @@
   .select-type {
     .s-list {
       max-height: 270px;
-      // overflow-y: auto;
-      overflow-x: hidden;
-      margin: 0 -20px;
+      overflow-y: auto;
+      // overflow-x: hidden;
+      // margin: 0 -20px;
+      margin-right: -15px;
+      margin-left: -20px;
+      padding-left: 20px;
     }
 
     /******************选择样式-模板 */
@@ -510,62 +537,6 @@
       box-shadow: 1px 5px 20px #dedede;
       background-size: 95% 95% !important;
     }
-
-    /******************设置内容 */
-    .s-choose {
-      .s-title {
-        font-weight: 400;
-        margin-top: 10px;
-
-        .s-edit {
-          font-size: 20px;
-          cursor: pointer;
-          color: @m-col-b7;
-          float: right;
-          user-select: none;
-          i{
-            font-weight: bold;
-          }
-          &:hover {
-            opacity: 0.9;
-          }
-
-          &:active {
-            opacity: 1;
-          }
-        }
-        .s-del{
-          margin-left: 10px;
-        }
-      }
-
-      .s-c-add {
-        cursor: pointer;
-        width: 100%;
-        outline: none;
-        border: none;
-        color: @m-col-b7;
-        font-size: 14px;
-        line-height: 40px;
-        background-color: @m-col-b0;
-        margin-top: 10px;
-        border-bottom: 1px dashed @m-col-b4;
-
-        i {
-          font-size: 14px;
-          margin-right: 8px;
-        }
-
-        &:hover {
-          opacity: 0.9;
-        }
-
-        &:active {
-          opacity: 1;
-        }
-      }
-
-    }
   }
 }
 
@@ -616,3 +587,63 @@
 .mt-5 {
   margin-top: 5px;
 }
+/**栏目配置表格**/
+.coumn-table{
+  width: calc(100% - 7px);
+  margin-top: 10px;
+  border-radius: 3px;
+  border-top: 1px solid #E2E8F1;
+  border-right: 1px solid #E2E8F1;
+  overflow: hidden;
+  /deep/.el-input__inner{
+    border: 1px solid transparent;
+    background-color:transparent;
+    padding-left: 0;
+    // padding-right:20px;
+  }
+  // /deep/.el-input__suffix{
+  //   right: 0;
+  // }
+  /deep/.el-select .el-input.is-focus .el-input__inner{
+    border-color: transparent;
+  }
+  /deep/.el-cascader:not(.is-disabled):hover .el-input__inner{
+    border-color: transparent;
+  }
+  .row{
+    height: 40px;
+    border-bottom: 1px solid #E2E8F1;
+    display: flex;
+    &:nth-child(odd){
+      background: #EFF2F3;
+    }
+    .cl{
+      height: 40px;
+      padding:3px 5px;
+      border-left: 1px solid #E2E8F1;
+    }
+    .t-center{
+      color: #999;
+      text-align: center;
+      line-height: 30px;
+    }
+    .col1{
+      flex: 1.5;
+    }
+    .col2,.col3{
+      flex: 1;
+    }
+    .col4{
+      flex: 0.8;
+      font-size: 18px;
+      line-height:35px;
+      color: #6777ef;
+    }
+  }
+  .c-t-head{
+    line-height:30px;
+    font-size: 14px;
+    color: #999;
+  }
+}
+
