--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -335,6 +335,7 @@
       padding: 10px;
       img{
         height:auto;
+        max-height: 100%;
         max-width: 100%;
         display: block;
         margin: auto;
