--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -152,7 +152,7 @@
         right: 0;
         z-index: 1;
         .scaling-right{
-          position: absolute;
+          position: fixed;
           right: 10px;
           bottom:10px;
           z-index: 999;
