--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -354,10 +354,10 @@
   }
 /*左侧菜单缩放后-按钮**/
   .left-menu-flex{
-    position: absolute;
-    left: 0;
+    position: fixed;
+    left:90px;
     top: 50%;
-    z-index: 20;
+    z-index: 1;
     margin-top: -124px;
     color: #fff;
     
