--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -816,6 +816,7 @@ iframe {
 /******场景-主题风格折叠面板重置*******/
 .drag-collapse {
   border-top: 0px solid @ph-col-n3;
+  border-bottom: 0px solid @ph-col-n3;
 
   .el-collapse-item__header {
     color: @ph-col-n12;
