--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -172,7 +172,7 @@
       width: 32px;
       height:32px;
       padding: 0;
-      background: #F9FAFC;
+      background: #EDEFF3;
     }
   }
   .app-type{
@@ -452,7 +452,7 @@
     }
   }
   .img-w{
-    height: 70px;
+    height: 65px;
     .img-show{
       padding: 0;
     }
@@ -502,7 +502,7 @@
 
   .select-type {
     .s-list {
-      max-height: 340px;
+      max-height: 322px;
       overflow-y: auto;
       // overflow-x: hidden;
       // margin: 0 -20px;
