页面修改完成

--- a/src/assets/admin/css/style.less
+++ b/src/assets/admin/css/style.less
@@ -841,9 +841,11 @@ iframe {
   }
 
   .is-active {
-    .el-collapse-item__header,
-    .el-icon-arrow-right {
+    .el-collapse-item__header{
       color:#333;
+    }
+    .el-icon-arrow-right {
+      color:#939BBA;
     }
   }
 }
