--- a/src/assets/admin/font/iconfont.css
+++ b/src/assets/admin/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3145988 */
-  src: url('iconfont.woff2?t=1674024968389') format('woff2'),
-       url('iconfont.woff?t=1674024968389') format('woff'),
-       url('iconfont.ttf?t=1674024968389') format('truetype');
+  src: url('iconfont.woff2?t=1677476956867') format('woff2'),
+       url('iconfont.woff?t=1677476956867') format('woff'),
+       url('iconfont.ttf?t=1677476956867') format('truetype');
 }
 
 .iconfont {
@@ -13,8 +13,28 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.el-icon-vip-Shape:before {
+  content: "\e696";
+}
+
+.el-icon-vip-Vector:before {
+  content: "\e697";
+}
+
+.el-icon-vip-a-Group58:before {
+  content: "\e695";
+}
+
+.el-icon-vip-Union:before {
+  content: "\e698";
+}
+
 .el-icon-vip-xuanzhong:before {
   content: "\e693";
+}
+
+.el-icon-vip-xuanzhong1:before {
+  content: "\e694";
 }
 
 .el-icon-vip-zhuti:before {
