--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -83,7 +83,7 @@
       .drag-l-pad,.drag-r-pad{
         width: 100%;
         height: 100%;
-        min-height:500px;
+        height:590px;
         padding: 0 12px;
         padding-right: 5px;
         padding-bottom: 20px;
@@ -96,10 +96,6 @@
         &::-webkit-scrollbar-thumb:hover {background-color: #ddd;}
         &::-webkit-scrollbar-corner {background-color: #ddd;}
         &::-webkit-scrollbar-resizer {background-color: #ddd;}
-      }
-      .drag-r-pad{
-        min-height: 200px;
-        background: url(../../../assets/admin/img/nullsetdata.png) no-repeat center;
       }
       .drag-l,.drag-r{
         user-select:none;
@@ -174,6 +170,7 @@
           .drag-warp-bg{
             // min-height: 100%;
             width: 100%;
+            padding-bottom: 5px;
             background-color: #F1F3F7;
           }
           .drag-content{
@@ -387,3 +384,4 @@
       }
     }
   }
+  
