--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -478,7 +478,7 @@
         border-radius: 3px;
         overflow: hidden;
         position: relative;
-        background: #f2f4f6;
+        background: #D5DCE9;
         flex-shrink: 0;
         &:hover{
           .del{
