--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -654,6 +654,9 @@
   // background: url(../../../../assets/admin/img/nullsetdata.png) no-repeat top;
   // background-position-y:20px;
 }
+.set-btn-w{
+  min-height: 80px;
+}
 .drag-r-warp {
   right: 0;
   // box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.02);
