--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -97,6 +97,10 @@
         &::-webkit-scrollbar-corner {background-color: #ddd;}
         &::-webkit-scrollbar-resizer {background-color: #ddd;}
       }
+      .drag-r-pad{
+        background: url(../../../assets/admin/img/nullsetdata.png) no-repeat center;
+        background-position-y:50px;
+      }
       .drag-l,.drag-r{
         user-select:none;
         position: fixed;
