--- a/static/js/gridstack/update_class.css
+++ b/static/js/gridstack/update_class.css
@@ -9,13 +9,13 @@
     position: absolute;
     right: 0;
     top: 0;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.3);
     border: 1px solid #e6e9ff;
-    color: red;
+    color: #ec0606;
     display: block;
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
     text-align: center;
     font-size: 14px;
     border-radius: 50%;
