--- a/src/assets/public/css/public.less
+++ b/src/assets/public/css/public.less
@@ -58,6 +58,9 @@ button,input,textarea{
 button{
   cursor: pointer;
 }
+input[type='file']{
+  cursor: pointer;
+}
 .c-l:after {
   content: " ";
   height: 0;
