--- a/src/views/admin/scene/scene_set.less
+++ b/src/views/admin/scene/scene_set.less
@@ -193,7 +193,7 @@
               bottom: -5px;
               right:-5px;
               top:0;
-              border: 3px dashed rgba(211,211,211,0.9);
+              border: 3px dashed #36BDFF;
               // border-top-width:0;
             }
           }
