--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -129,6 +129,8 @@
         justify-content: center;
       }
       .img-cover{
+        width:17px;
+        height:17px;
         margin-right:6px;
       }
       &:hover {
