默认模板-增加颜色区分

--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -144,7 +144,10 @@
         right: 0;
         top: 0;
       }
-    }  
+    } 
+    .default-temp{
+      background: #e2e8f4;
+    }
     .fot-c1{
       color: #fff;
     }
