--- a/src/assets/public/css/public.css
+++ b/src/assets/public/css/public.css
@@ -1,30 +1,34 @@
 @charset "UTF-8";
 /***滚动条样式**/
-*::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+::-webkit-scrollbar {
+  background: #f7f7f9;
+  width: 8px;
+  /* 纵向滚动条滑块宽度 */
+  height: 8px;
+  /* 横向滚动条滑块宽度 */
 }
-*::-webkit-scrollbar-button {
-  display: none;
+::-webkit-scrollbar-track-piece {
+  /*滚动条背景颜色*/
+  background: #f7f7f9;
 }
-*::-webkit-scrollbar-track {
-  background-color: #ddd;
+::-webkit-scrollbar-thumb {
+  /* 滑块 */
+  border-radius: 2px;
+  background: #e5e5e5;
 }
-*::-webkit-scrollbar-track-piece {
-  background: #f8f8f8;
+::-webkit-scrollbar-thumb:vertical {
+  /* 纵向滑块 */
+  background: #e5e5e5;
 }
-*::-webkit-scrollbar-thumb {
-  background-color: #ddd;
-  border-radius: 0px;
+::-webkit-scrollbar-thumb:horizontal {
+  /* 横向滑块 */
+  background: #e5e5e5;
 }
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #ddd;
-}
-*::-webkit-scrollbar-corner {
-  background-color: #ddd;
-}
-*::-webkit-scrollbar-resizer {
-  background-color: #ddd;
+* {
+  scrollbar-color: #e5e5e5 #f7f7f9;
+  /* 滑块颜色  滚动条背景颜色 */
+  scrollbar-width: thin;
+  /* 滚动条宽度有三种：thin、auto、none */
 }
 .el-aside {
   overflow-y: auto;
