--- a/src/assets/public/css/public.less
+++ b/src/assets/public/css/public.less
@@ -1,13 +1,39 @@
 @charset "UTF-8";
 /***滚动条样式**/
-*::-webkit-scrollbar {width:5px;height: 5px;}
-*::-webkit-scrollbar-button {display: none;}
-*::-webkit-scrollbar-track {background-color: #ddd;}
-*::-webkit-scrollbar-track-piece {background: #f8f8f8;}//滚动条底部颜色
-*::-webkit-scrollbar-thumb {background-color: #ddd;border-radius: 0px;}
-*::-webkit-scrollbar-thumb:hover {background-color: #ddd;}
-*::-webkit-scrollbar-corner {background-color: #ddd;}
-*::-webkit-scrollbar-resizer {background-color: #ddd;}
+// *::-webkit-scrollbar {width:5px;height: 5px;}
+// *::-webkit-scrollbar-button {display: none;}
+// *::-webkit-scrollbar-track {background-color: #ddd;}
+// *::-webkit-scrollbar-track-piece {background: #f8f8f8;}//滚动条底部颜色
+// *::-webkit-scrollbar-thumb {background-color: #ddd;border-radius: 0px;}
+// *::-webkit-scrollbar-thumb:hover {background-color: #ddd;}
+// *::-webkit-scrollbar-corner {background-color: #ddd;}
+// *::-webkit-scrollbar-resizer {background-color: #ddd;}
+
+::-webkit-scrollbar {
+  background: #f7f7f9;
+  width:8px;  /* 纵向滚动条滑块宽度 */
+  height:8px; /* 横向滚动条滑块宽度 */
+}
+::-webkit-scrollbar-track-piece { /*滚动条背景颜色*/
+  background: #f7f7f9;
+}
+::-webkit-scrollbar-thumb { /* 滑块 */
+  border-radius:2px;
+  background: #e5e5e5;
+}
+// 也可以单独设置横向滚动条和纵向滚动条的背景颜色
+::-webkit-scrollbar-thumb:vertical { /* 纵向滑块 */
+  background: #e5e5e5;
+}
+::-webkit-scrollbar-thumb:horizontal { /* 横向滑块 */
+  background: #e5e5e5;
+}
+* {
+  scrollbar-color: #e5e5e5 #f7f7f9; /* 滑块颜色  滚动条背景颜色 */
+  scrollbar-width: thin; /* 滚动条宽度有三种：thin、auto、none */
+}
+
+
 .el-aside{//针对火狐浏览器，后台-左侧菜单
 	overflow-y: auto;
 	overflow-x: hidden;
