深职院预览-滚动-底部

--- a/src/views/admin/preview/css/previewScreenSZY.less
+++ b/src/views/admin/preview/css/previewScreenSZY.less
@@ -110,11 +110,11 @@
   }
   //底部-固定最底部
   .temp-footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 99;
+    // position: absolute;
+    // bottom: 0;
+    // left: 0;
+    // right: 0;
+    // z-index: 1;
   }
   .jl_vip_zt_warp {
     height: 100%;
