深职院-首页样式按新中台调整

--- a/src/views/admin/preview/css/previewScreenSZY.css
+++ b/src/views/admin/preview/css/previewScreenSZY.css
@@ -136,6 +136,9 @@
     overflow-x: auto;
   }
 }
+ /deep/ .dlib3-temp-imgvideo .img-warp-bg {
+  background-size: 100% 100% !important;
+}
 #temp1 {
   background-image: url(../../../../../static/images/szy/part2-rightbg.png), url(../../../../../static/images/szy/line-bg.jpg);
   background-position: 100% 0%, bottom center;
