--- a/src/views/admin/scene/model/model.less
+++ b/src/views/admin/scene/model/model.less
@@ -123,10 +123,18 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      padding: 0 8px;
       .d-b-txt {
+        width: 100%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         display: flex;
         align-items: center;
         justify-content: center;
+      }
+      .block{
+        display: block;
       }
       .img-cover{
         width:17px;
