深职院-首页背景样式修改

--- a/src/views/admin/preview/css/previewScreenSZY.less
+++ b/src/views/admin/preview/css/previewScreenSZY.less
@@ -287,6 +287,7 @@
 
 #temp6 {
   background: url(../../../../../static/images/szy/part1-bg-left.png) left bottom 58% no-repeat,
-    url(../../../../../static/images/szy/part3-bg-right.png) right -20px top -16% no-repeat;
-  background-size: 14%, 22% !important;
+    url(../../../../../static/images/szy/part3-bg-right.png) right -20px top -16% no-repeat,
+    url(../../../../../static/images/szy/line-bg.jpg) bottom center no-repeat;
+  background-size: 14%, 22% ,100% !important;
 }
