--- a/src/views/admin/preview/css/previewScreenSZY.css
+++ b/src/views/admin/preview/css/previewScreenSZY.css
@@ -222,6 +222,6 @@
   background-size: 14%, 25%, 100% !important;
 }
 #temp6 {
-  background: url(../../../../../static/images/szy/part1-bg-left.png) left bottom 58% no-repeat, url(../../../../../static/images/szy/part3-bg-right.png) right -20px top -16% no-repeat;
-  background-size: 14%, 22% !important;
+  background: url(../../../../../static/images/szy/part1-bg-left.png) left bottom 58% no-repeat, url(../../../../../static/images/szy/part3-bg-right.png) right -20px top -16% no-repeat, url(../../../../../static/images/szy/line-bg.jpg) bottom center no-repeat;
+  background-size: 14%, 22% ,100% !important;
 }
